force-app/main/default/objects/Google_Task__c/Google_Task__c.object-meta.xml
<CustomObject>
    <description>Used to store Google Task Title</description>
    <label>Google Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>