force-app/main/default/objects/Google_Task__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>Used for the Completion date of the task.</description>
    <label>Completed</label>
    <type>Date</type>
</CustomField>