force-app/main/default/objects/Google_Task__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is false for the records which are not deleted and true for the records which are deleted.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>