force-app/main/default/objects/Google_Task__c/fields/Due__c.field-meta.xml
<CustomField>
    <fullName>Due__c</fullName>
    <description>Used for the Due date of the task.</description>
    <label>Due</label>
    <type>Date</type>
</CustomField>