force-app/main/default/objects/Google_Task__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Used for Notes describing the task.</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>