force-app/main/default/objects/Google_Task__c/fields/Selflink__c.field-meta.xml
<CustomField>
    <fullName>Selflink__c</fullName>
    <description>URL pointing to this task.</description>
    <label>Selflink</label>
    <type>Url</type>
</CustomField>