force-app/main/default/objects/Google_Task__c/fields/Synced__c.field-meta.xml
<CustomField>
    <fullName>Synced__c</fullName>
    <description>It is false for the records which has no Task Id and true for the records which has Task Id</description>
    <formula>IF(ISBLANK( Task_Id__c ), false, true)</formula>
    <label>Synced</label>
    <type>Checkbox</type>
</CustomField>