force-app/main/default/objects/Google_Task__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>Used to store the Id of the Google Task.</description>
    <label>Task Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>