force-app/main/default/objects/Google_Task__c/fields/Tasklist__c.field-meta.xml
<CustomField>
    <fullName>Tasklist__c</fullName>
    <description>Master Detail relationship to the Google Tasklist object</description>
    <label>Tasklist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Google_Tasklist__c.Synced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Google_Tasklist__c</referenceTo>
    <relationshipLabel>Google Tasks</relationshipLabel>
    <relationshipName>Google_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>