force-app/main/default/objects/Google_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Id__c</columns>
    <columns>Tasklist__c</columns>
    <columns>Synced__c</columns>
    <columns>Selflink__c</columns>
    <columns>Notes__c</columns>
    <columns>Status__c</columns>
    <columns>Due__c</columns>
    <columns>Completed__c</columns>
    <columns>Deleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tasks</label>
</ListView>