force-app/main/default/objects/Google_Task__c/listViews/Completed_Tasks.listView-meta.xml
<ListView>
    <fullName>Completed_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Due__c</columns>
    <columns>Status__c</columns>
    <columns>Synced__c</columns>
    <columns>Task_Id__c</columns>
    <columns>Tasklist__c</columns>
    <columns>Completed__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>lessOrEqual</operation>
        <value>3/13/2023</value>
    </filters>
    <label>Completed Tasks</label>
</ListView>