force-app/main/default/objects/Google_Task__c/listViews/Deleted_Tasks.listView-meta.xml
<ListView>
    <fullName>Deleted_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Task_Id__c</columns>
    <columns>Tasklist__c</columns>
    <columns>Synced__c</columns>
    <columns>Status__c</columns>
    <columns>Deleted__c</columns>
    <columns>Due__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Deleted Tasks</label>
</ListView>