force-app/main/default/objects/Google_Task__c/listViews/Unsynced.listView-meta.xml
<ListView>
    <fullName>Unsynced</fullName>
    <columns>NAME</columns>
    <columns>Selflink__c</columns>
    <columns>Task_Id__c</columns>
    <columns>Tasklist__c</columns>
    <columns>Synced__c</columns>
    <columns>Status__c</columns>
    <columns>Due__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Synced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unsynced Task</label>
</ListView>